# aclimatesdkpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: aclimatesdkpy.yml
examples/: aclimate_spatial_data.ipynb  basic_usage.py
src/aclimate_sdk/: __init__.py  aclimate_api_error.py  aclimate_client.py  aclimate_models.py  context_builder.py
src/aclimatesdkpy/: __init__.py  aclimate_auth_error.py  aclimate_client.py  aclimate_models.py  context_builder.py  utils.py
tests/: test_client.py
