[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aclimatesdkpy"
version = "0.1.0"
description = "Async Python SDK client for the AClimate v3 API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Steven Sotelo" }
]
keywords = ["aclimate", "climate", "agriculture", "sdk", "api", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.6,<3",
  "tenacity>=8.2,<10",
]

[project.urls]
Homepage = "https://github.com/CIAT-DAPA/aclimatesdkpy"
Repository = "https://github.com/CIAT-DAPA/aclimatesdkpy"
Issues = "https://github.com/CIAT-DAPA/aclimatesdkpy/issues"
API = "https://api.aclimate.org/openapi.json"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aclimatesdkpy = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_return_any = false
